--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -24,6 +24,13 @@
 
         var salario = Number(window.prompt('Qual o seu salário?'));
         document.write(`Tudo bem, seu salário é ${salario.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})}`);
+
+        var a = 5 + 3 // 8
+        var b = a % 5 // 3
+        var c = 5 * b ** 2 // 45
+        var d = 10 - a / 2 // 6
+        var e = 6 * 2 / d // 2
+        var f = b % e + 4 / e // 3
     </script>
 </body>
 </html>
